--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -22,6 +22,6 @@ nette:
 
 
 services:
-	- App\Model\UserManager
+#	- App\Model\UserManager
 	- App\RouterFactory
 	router: @App\RouterFactory::createRouter
