--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -22,6 +22,8 @@ nette:
 
 
 services:
-#	- App\Model\UserManager
+	- App\Model\LDAPUserManager
 	- App\RouterFactory
 	router: @App\RouterFactory::createRouter
+	config:
+		class: \App\Model\Config()
