Complete UI, time tracking, logging integration

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -29,9 +29,27 @@ allowed_attempts = 3
 
 ; Time, in seconds, which user has to
 ; update its password.
-session_time = 20
+session_time = 30
 
 ; Time, in seconds, which user has to wait for new
 ; auth attempt after {allowed-attempts} unsuccesful
 ; attempts.
-safe_time = 10
+safe_time = 600
+
+
+; Log4php config
+; Logger for everything except access
+log4php.rootLogger = DEBUG, default
+
+log4php.appender.default = LoggerAppenderFile
+log4php.appender.default.file = ../log/security.log
+log4php.appender.default.layout = LoggerLayoutPattern
+log4php.appender.default.layout.ConversionPattern = %date{d.m.Y H:i:s,u} %logger %-5level %msg%n
+
+; Logger for access via http(s)
+log4php.logger.access = INFO, access
+
+log4php.appender.access = LoggerAppenderFile
+log4php.appender.access.file = ../log/access.log
+log4php.appender.access.layout = LoggerLayoutPattern
+log4php.appender.access.layout.ConversionPattern = %date [%pid] From:%server{REMOTE_ADDR}:%server{REMOTE_PORT} Message: %msg%n
