Enabled HTTPS enforcement

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -18,6 +18,10 @@ password = "userPassword"
 real_name = "cn"
 mail = "mail"
 
+; HTTPS support. If this directive is on,
+; this application will force https connection.
+; Otherwise HTTPS will not work.
+enable_https = true
 
 ; Minimal length of new password
 min_passwd_length = 8
