--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -21,7 +21,7 @@ mail = "mail"
 ; HTTPS support. If this directive is on,
 ; this application will force https connection.
 ; Otherwise HTTPS will not work.
-enable_https = true
+enable_https = false
 
 ; Minimal length of new password
 min_passwd_length = 8
